# librlog

./: .gitignore  AUTHORS  CONTRIBUTE  ChangeLog  Makefile.am  README  bootstrap  configure.ac
include/: librlog.h
src/: Makefile.am  log.c
tests/: .gitignore  Makefile.am  test.c
